<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BibliotecaActivity">

    <TextView
        android:id="@+id/tvBiblioteca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/biblioteca"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/lvBiblioteca"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/eIsbn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBiblioteca" />

    <Button
        android:id="@+id/bAnadir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/addLibro"
        android:onClick="operar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bBorrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:enabled="false"
        android:text="@string/delLibro"
        android:onClick="operar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/bModificar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:enabled="false"
        android:text="@string/modLibro"
        android:onClick="operar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bBorrar"
        app:layout_constraintStart_toEndOf="@+id/bAnadir" />

    <TextView
        android:id="@+id/tvDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/descripcion"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/eDescipcion"
        app:layout_constraintEnd_toEndOf="@+id/bAnadir" />

    <TextView
        android:id="@+id/tvGenero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/genero"
        app:layout_constraintBottom_toTopOf="@+id/eDescipcion"
        app:layout_constraintEnd_toEndOf="@+id/bAnadir" />

    <TextView
        android:id="@+id/tvAutor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/autor"
        app:layout_constraintBottom_toTopOf="@+id/eGenero"
        app:layout_constraintEnd_toEndOf="@+id/bAnadir" />

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/nombre"
        app:layout_constraintBottom_toTopOf="@+id/eAutor"
        app:layout_constraintEnd_toEndOf="@+id/bAnadir" />

    <TextView
        android:id="@+id/tvSeleccionado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/seleccionado"
        app:layout_constraintBottom_toTopOf="@+id/eNombre"
        app:layout_constraintEnd_toEndOf="@+id/bAnadir" />

    <EditText
        android:id="@+id/eDescipcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/bModificar"
        app:layout_constraintStart_toStartOf="@+id/bModificar" />

    <EditText
        android:id="@+id/eGenero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/eDescipcion"
        app:layout_constraintStart_toStartOf="@+id/bModificar" />

    <EditText
        android:id="@+id/eAutor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/eGenero"
        app:layout_constraintStart_toStartOf="@+id/bModificar" />

    <EditText
        android:id="@+id/eNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/eAutor"
        app:layout_constraintStart_toStartOf="@+id/bModificar" />

    <EditText
        android:id="@+id/eIsbn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:editable="false"
        android:ems="10"
        android:enabled="false"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/eNombre"
        app:layout_constraintStart_toStartOf="@+id/bModificar" />

</androidx.constraintlayout.widget.ConstraintLayout>